tests/build/cases/widget/attrs_allowed_in_properties.stderr
error: only `allowed_in_when`, `cfg`, `doc`, `priority_index`, `required`, `dyn_retained`, `dyn_when_default` and lint attributes are allowed in properties
  --> cases/widget/attrs_allowed_in_properties.rs:20:11
   |
20 |         #[inline]
   |           ^^^^^^

error: only `allowed_in_when`, `cfg`, `doc`, `priority_index`, `required`, `dyn_retained`, `dyn_when_default` and lint attributes are allowed in properties
  --> cases/widget/attrs_allowed_in_properties.rs:23:11
   |
23 |         #[foo(bar)]
   |           ^^^

error: only `allowed_in_when`, `cfg`, `doc`, `priority_index`, `required`, `dyn_retained`, `dyn_when_default` and lint attributes are allowed in properties
  --> cases/widget/attrs_allowed_in_properties.rs:26:16
   |
26 |         #[foo::bar(true)]
   |                ^^^
